ACS-1582 : Storage classes - java api    -